--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"> -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 </head>
 <body id="top">
