--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         <p>
                         Uppal,<br>
                         Hyderabad<br>
-                        <a href="tel:918333972721">+91 83339 72721</a>
+                        <a href="tel:+918333972721">+91 83339 72721</a>
                         </p>
                     </div>
         
