--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <div class="column large-6 w-900-stack s-about__intro-text">
                 <h1 class="display-1" data-aos="fade-up">
-                    Digital Dream is a Desgining agency based on Freelancers. We design thoughtful digital experiences and beautiful brand aesthetics.
+                    Digital Dream is a Designing agency based on Freelancers. We design thoughtful digital experiences and beautiful brand aesthetics.
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
@@ -213,7 +213,7 @@
         <div class="row block-large-1-2 block-tab-full s-services__services item-list">
             <div class="column item item-service" data-aos="fade-up">
                 <span class="service-icon service-icon--frontend"></span>
-                <h3 class="item-title">Web Desgining</h3>
+                <h3 class="item-title">Web Designing</h3>
                 <p>
                 Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                 Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
@@ -233,7 +233,7 @@
             </div>
             <div class="column item item-service" data-aos="fade-up">
                 <span class="service-icon service-icon--product-design"></span>
-                <h3 class="item-title">Graphic Desgining</h3>
+                <h3 class="item-title">Graphic Designing</h3>
                 <p>
                 Deserunt rerum perspiciatis quaerat quam numquam assumenda neque. 
                 Quis dolores totam voluptatibus molestiae non. Quae exercitationem 
